--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "hackthebox",
     "publisher": "silofy",
-    "displayName": "hackthebox",
+    "displayName": "HackTheBox",
     "description": "A VS Code theme inspired by Hack The Box's color palette.",
     "version": "0.0.2",
     "engines": {
